--- a/styles/game-section.css
+++ b/styles/game-section.css
@@ -70,6 +70,10 @@
     font-weight: 300;
 }
 
+.game-section .games-container div a {
+    text-decoration: none;
+}
+
 .game-section .games-container div a picture .discount {
     background: #D30404;
     color: #FFFFFF;
@@ -79,4 +83,31 @@
     position: relative;
     z-index: 2;
     bottom: 30px;
+}
+
+
+/* Responsive */
+@media (min-width: 992px) and (max-width: 1199.98px) {
+    /* Game section */
+    .game-section .games-container {
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+    }
+  }
+
+
+  @media (min-width: 768px) and (max-width: 991.98px) {
+/* Game section */
+   .game-section .games-container {
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+    }
+
+    .game-section .games-container div {
+        max-width: 320px;
+    }
+
+    .game-section .games-container div a picture img {
+        width: 320px;
+    }
 }
