--- a/styles/contact.css
+++ b/styles/contact.css
@@ -46,6 +46,18 @@
     grid-column: span 2;
 }
 
+.form-container select {
+    outline: none;
+    user-select: none;
+    background-color: #141414;
+    padding: 6px 12px 6px 12px;
+    border: 1px solid #D30404;
+    border-radius: 4px;
+    color: white;
+    width: 100%;
+    grid-column: span 2;
+}
+
 .form-container button {
     background-color: #141414;
     padding: 6px 12px 6px 12px;
@@ -65,5 +77,12 @@
 
     .form-container {
         width: 40%;
+    }
+}
+
+/* SM */
+@media (max-width: 480px) {
+    input {
+        font-size: 8px;
     }
 }
