--- a/styles/styles.css
+++ b/styles/styles.css
@@ -146,7 +146,14 @@ aside {
     font-weight: 300;
     letter-spacing: 3px;
     margin-inline: 24px;
+
+    &:hover {
+        border-bottom: 1px solid #D30404;
+        transition: all 300ms ease-in;
+    }
 }
+
+
 
 .nav-category-container .nav-container-categories a svg {
     margin-top: 2px;
@@ -189,6 +196,15 @@ aside {
     display: flex;
     align-items: center;
     margin-top: 12px;
+}
+
+.main-text .date-text {
+    font-weight: 300;
+    font-size: medium;
+    background-color: #ffffff1f;
+    width: fit-content;
+    padding: 3px 6px 3px 6px;
+    border-radius: 8px;
 }
 
 .main-text p {
@@ -290,7 +306,7 @@ aside {
     }
 
     .carousel .carousel-inner .carousel-item img {
-        opacity: 0.4;
+        opacity: 20;
     }
 
     .main-text p {
@@ -299,5 +315,10 @@ aside {
 
     .main-text {
         left: 5rem;
+    }
+
+    .main-text .date-text {
+        font-size: small;
+        padding-inline: 4px;
     }
 }
